# rusty-primitive

./: .editorconfig  .gitignore  .typos.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: napi-prebuilds.yml  quality.yml
binding/: Cargo.toml
binding/src/: binding.rs
crates/primeval-cli/: Cargo.toml
crates/primeval-cli/src/: main.rs
crates/primeval-core/: Cargo.toml
crates/primeval-core/src/: error_grid.rs  export.rs  lib.rs  model.rs  optimize.rs  raster.rs  rng.rs  score.rs  shapes.rs  state.rs  test_util.rs  worker.rs
crates/primeval-render/: Cargo.toml
crates/primeval-render/src/: lib.rs
crates/primitive-cli/: Cargo.toml
crates/primitive-cli/src/: main.rs
crates/primitive-core/: Cargo.toml
crates/primitive-core/src/: buffer.rs  color.rs  error_grid.rs  export.rs  lib.rs  model.rs  rng.rs  scanline.rs  shapes.rs  state.rs  util.rs  worker.rs
docs/: gallery.md
scripts/: __init__.py  benchmark.py  napi-targets.mjs  test_benchmark.py
src/: cli.ts  index.ts
test/: cli.test.js  contracts.test.js  index.test.js  native.test.js
test/tooling/: napi-targets.test.js
