[workspace]
resolver = "2"
members = [
    "crates/primeval-core",
    "crates/primeval-cli",
    "crates/primeval-render",
    "binding",
]

[workspace.package]
homepage = "https://github.com/aleburato/primeval"
repository = "https://github.com/aleburato/primeval"
license = "MIT"

[workspace.lints.rust]
unreachable_pub = "deny"
dead_code = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

# Same as release but with line-level debug info for samply / flamegraph.
# Never use this in production — binary will be ~2x larger.
[profile.profiling]
inherits = "release"
debug = 1
