[package]
name = "primeval-node"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
primeval-core = { path = "../crates/primeval-core" }
primeval-render = { path = "../crates/primeval-render" }

[build-dependencies]
napi-build = "2"
