[package]
name = "primeval-render"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
primeval-core = { path = "../primeval-core" }
