[package]
name = "primitive-cli"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
primitive-core = { path = "../primitive-core" }
