[package]
name = "primitive-core"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
gif = "0.13"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
